add pg database, with sqlc, edit controller, add migrations to create table
