# db/models.go
@@ -1,0 +1,12 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+
+package db
+
+type Book struct {
+	ID       int32
+	Title    string
+	Author   string
+	Quantity int32
+}
