# docs/swagger.json
@@ -24,7 +24,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Book"
+                                "$ref": "#/definitions/db.Book"
                             }
                         }
                     }
@@ -49,7 +49,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/dto.CreateBookRequest"
                         }
                     }
                 ],
@@ -57,7 +57,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/db.Book"
                         }
                     }
                 }
@@ -86,7 +86,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/db.Book"
                         }
                     },
                     "404": {
@@ -124,7 +124,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/db.Book"
                         }
                     },
                     "400": {
@@ -217,7 +217,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/db.Book"
                         }
                     },
                     "400": {
@@ -243,14 +243,32 @@
         }
     },
     "definitions": {
-        "models.Book": {
-            "description": "Book data structure",
+        "db.Book": {
             "type": "object",
             "properties": {
                 "author": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateBookRequest": {
+            "type": "object",
+            "required": [
+                "author",
+                "quantity",
+                "title"
+            ],
+            "properties": {
+                "author": {
                     "type": "string"
                 },
                 "quantity": {
