# dto/book.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreateBookRequest struct {
+	Title    string `json:"title" binding:"required"`
+	Author   string `json:"author" binding:"required"`
+	Quantity int32  `json:"quantity" binding:"required"`
+}
